fix: adjust min-height for product list container on smaller screens and refine image styling in homepage

--- a/src/styles/pages/category/product-list.scss
+++ b/src/styles/pages/category/product-list.scss
@@ -198,7 +198,12 @@
 .product-list-container {
   @include clearfix();
 
+  min-height: 450px;
   padding-bottom: ($space-default * 2);
+
+  @media (max-width: $screen-xs-max) {
+    min-height: 700px;
+  }
 
   a.view-all {
     clear: both;
